feat: recover owner password by contact threshold
